<resources>
    <string name="app_name">Mint</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Given email address is invalid</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="add_company_text">Add company info</string>
    <string name="company_location_text">Location</string>
    <string name="search">Search</string>
    <string name="company_name">Company name</string>
    <string name="get_address_from_map">Get address from map</string>
    <string name="categories">Categories</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="previous">Previous</string>
    <string name="title_activity_add_company_maps_location">Map</string>
    <string name="price_list">Price List</string>
    <string name="finish_on_boarding">Finish</string>
    <string name="ratings">Ratings</string>
    <string name="info">Info</string>
    <string name="address_not_found">Not found</string>
    <string name="address_is_not_valid">Not valid address</string>
    <string name="title_activity_results">Results</string>
    <string name="add">Add</string>
    <string name="distance">Distance</string>
    <string name="name">Name</string>
    <string name="hair">Hair</string>
    <string name="nails">Nails</string>
    <string name="makeup">Makeup</string>
    <string name="adding_company_failed">Adding company failed, invalid fields</string>
    <string name="company_added_success">Company has been added successfully</string>
    <string name="manicure">Manicure</string>
    <string name="pedicure">Pedicure</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="eyelashes">Eyelashes</string>
    <string name="solarium">Solarium</string>
    <string name="facial">Facial</string>
    <string name="company_name_taken">Add failed, company name already taken</string>
    <string name="address_here">Address here...</string>
    <string name="add_comment">Add comment</string>
    <string name="title">Title</string>
    <string name="comment">Comment</string>
    <string name="add_title_and_comment">Add title and comment</string>
    <string name="logged_in_question">This feature requires you to be logged in</string>
    <string name="log_in">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="near_you">Near you</string>
    <string name="the_companies_you_follow">Followed companies</string>
    <string name="add_company">Add company</string>
    <string name="error_passwords_does_not_match">Passwords does not match</string>
    <string name="error_password_validation">Password needs to contain at least six characters and one number</string>
    <string name="account_made">Account successfully made</string>
    <string name="error_invalid_email_or_password">Email address or password is invalid</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_rewrite_password">Rewrite password</string>
    <string name="new_mint">Not in Mint?</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="default_description">This company is added by the community, if you are the owner of this company, contact us</string>
    <string name="location">Location</string>
    <string name="onboarding_location_description">We need access to your location, so we can recommend places near you.</string>
    <string name="use_location">Use location</string>
    <string name="pick_location">Pick location</string>
    <string name="onboarding_search_description">Find beauty saloons by category</string>
    <string name="onboarding_location_pick_description">You can use gps based location or pick your location from map</string>
</resources>
